# simply-view-image-for-python-debugging

./: .actrc  .eslintrc.json  .gitignore  .mocharc.js  .mocharc.junit.js  .prettierignore  .vscodeignore  .yarnrc.yml  CHANGELOG.md  LICENSE  PYTHON_DEBUG_TESTS.md  README.md  TESTING.md  WORKFLOW_IMPROVEMENTS.md  eslint.config.mjs  package-lock.json  package.json  run-basic-tests.mjs  simply-view-image-for-python-debugging.code-workspace  ts-unit.xml  tsconfig.json  tsconfig.test.json  tsconfig.unit.json  vitest.config.ts  vscode-ext-config.json  webpack.config.js  webpack.config.mjs  webpack.config.prod.js  webpack.config.prod.mjs  webpack.extension.config.mjs  webpack.webview.config.mjs
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  main.yml  release.yml  stale.yml  test-junit.yml  test.yml
.husky/: pre-commit
docs/: TESTING_SPECIFICATION.md  TEST_SUITE_GUIDE.md
docs/plans/: 2026-03-09-e2e-image-verification-improvements.md  (+2 more)
example-plugin/: CHANGELOG.md  README.md  package.json
icons/: .fantasticonrc.js  package-lock.json  package.json
python_test/: README.md  debug_test.py  main_workflow_test.py
scripts/: rebase-pr.sh
src/: AllViewables.ts  CodeActionProvider.ts  DebugVariablesTracker.ts  ErrorHandling.ts  ExtensionPersistentState.ts  HoverProvider.ts  IStackWatcher.ts  ImagePreviewCustomEditor.ts  InformationResolver.ts  Logging.ts  PythonCodeHelper.ts  PythonInContextExecutor.ts  PythonObjectInfo.ts  PythonSelection.ts  PythonVariablesService.ts  SavePythonObject.ts  SerializationHelper.ts  VSCodeEditorUtils.ts  VariableWatcher.ts  ViewImageService.ts  ViewPlotService.ts  ViewPythonObject.ts  ViewTensorService.ts  ViewTorchService.ts  ViewableObject.ts  ViewableRegistry.ts  ViewerService.ts  WatchExpression.ts  WatchTreeItem.ts  WatchTreeProvider.ts  WatchVariable.ts  api.ts  commands.ts  config.ts  extension.ts  globalActions.ts  globals.ts  jupyter-intergration.ts  logging.ts  object-info.ts  (+9 more)
src/webview-ui/: .gitignore  App.css  App.tsx  Cargo.toml  build.rs  config.toml  gl_utils.rs  index.html  index.js  main.css  package.json  rustfmt.toml  tsconfig.json
src/webview-ui/components/: ImageView.css  ImageView.tsx  ImagesGrid.css  ImagesGrid.tsx  SelectableImage.css  SelectableImage.tsx
src/webview-ui/debug_shaders/: int-image.frag  int-planar-image.frag  normalized-image.frag  normalized-planar-image.frag  uint-image.frag  uint-planar-image.frag
src/webview-ui/icons/: .fantasticonrc.js  .gitignore  package-lock.json  package.json
src/webview-ui/icons/src/template/: mapping.json  styles.hbs
src/webview-ui/shaders/: Cargo.toml
src/webview-ui/shaders/src/: lib.rs  shader_parts.rs
src/webview-ui/src/: App.css  App.tsx  app.rs  coloring.rs  com_types.rs  configurations.rs  keyboard_event.rs  lib.rs  main_view.rs  mouse_events.rs  reducer.rs  store.rs  store_action.rs  tmp_for_debug.rs  types.d.ts
src/webview-ui/src/app_state/: app_state.rs  colormaps.rs  images.rs  mod.rs  viewables_cache.rs  views.rs  vscode_data_fetcher.rs
src/webview-ui/src/app_state/datasetructures/: image_cache.rs  mod.rs
src/webview-ui/src/application_state/: app_state.rs  colormaps.rs  images.rs  mod.rs  sessions.rs  views.rs  vscode_data_fetcher.rs
src/webview-ui/src/bindings/: lethargy_ts.rs  lodash.rs  mod.rs  plotlyjs.rs
src/webview-ui/src/colormap/: builtin_colormaps.rs  colormap.rs  mod.rs
src/webview-ui/src/common/: camera.rs  constants.rs  mod.rs  pixel_value.rs  texture_image.rs  types.rs  utils.rs
src/webview-ui/src/common/viewables/: image.rs  mod.rs  plotly.rs  viewables.rs
src/webview-ui/src/communication/: common.rs  incoming_messages.rs  message_handler.rs  mod.rs  outgoing_messages.rs  server_requests.rs  websocket_client.rs
src/webview-ui/src/components/: CodeTextAreaExt.tsx  RadioButtonGroup.css  RadioButtonGroup.tsx  SelectableImage.tsx  button.rs  checkbox.rs  colorbar.rs  context_menu.rs  context_menu_view.rs  dangerously_set_html_content.rs  display_options.rs  gl_view.rs  glcontext.rs  icon_button.rs  image_list_item.rs  image_selection_list.rs  image_view_toolbar.rs  legend.rs  main.rs  main_toolbar.rs  mod.rs  renderer_context.rs  session_select.rs  set_image_into_view_button.rs  sidebar.rs  single_view.rs  spinner.rs  status_bar.rs  types.rs  view_container.rs  viewable_info_container.rs
src/webview-ui/src/hooks/: mod.rs  use_drag.rs  use_event.rs
src/webview-ui/src/image_view/: builtin_colormaps.rs  camera.rs  color_matix.rs  colormap.rs  constants.rs  image_cache.rs  image_view.rs  image_views.rs  image_views_coordinator.rs  mod.rs  pixel_text_rendering.rs  renderer.rs  rendering_context.rs  text_rendering.rs  types.rs  utils.rs
src/webview-ui/src/math_utils/: image_calculations.rs  mat3.rs  mat4.rs  mod.rs
src/webview-ui/src/message/: common.rs  messages.rs  mod.rs
src/webview-ui/src/renderer/: camera.rs  gl_utils.rs  image_cache.rs  mod.rs  renderer.rs  types.rs
src/webview-ui/src/rendering/: colorbar_renderer.rs  coloring.rs  constants.rs  image_renderer.rs  mod.rs  pixel_text_rendering.rs  renderer.rs  rendering_context.rs  utils.rs
src/webview-ui/src/shaders/: basic.frag  basic.vert  colorbar.frag  colorbar.vert  image-int.frag  image-normalized.frag  image-planar-int.frag  image-planar-normalized.frag  image-planar-uint.frag  image-uint.frag  image.frag  image.vert  text.frag  text.vert
src/webview-ui/src/vscode/: messages.rs  mod.rs  parse_messages.rs  state.rs  vscode_listener.rs  vscode_requests.rs
src/webview-ui/src/webgl_utils/: attributes.rs  constants.rs  draw.rs  error.rs  general.rs  glyph.rs  mod.rs  program.rs  reusable_buffer.rs  textures.rs  types.rs  utils.rs
temp-ignore/: InformationResolver.ts  PythonObjectInfo.ts  PythonSelection.ts  SavePythonObject.ts  ViewableRegistry.ts
test/: =0.18.0  =1.20.0  =2.8.0  =2.9.0  =3.3.0  =4.5.0  =5.0.0  =8.0.0  README.md  runAllTests.ts  runBasicTests.ts  runTest.ts  setup-python-env.sh  tsconfig.json
test-results/: ts-unit.xml
tests/: UI_TESTS.md  vscode-test-settings.json
webview-ui/: index.html  package.json
(+236 files in other folders)
