[package]
name = "dom"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = [
  # If you uncomment this line, it will enable `wee_alloc`:
  # "wee_alloc",
  # If you uncomment this line, it will enable `console_error_panic_hook`:
  "console_error_panic_hook",
  "console_log",
]

[dependencies]
wasm-bindgen = "0.2.87"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = { version = "0.1.7", optional = true }

cfg-if = "1.0.0"
log = "0.4.20"
console_log = { version = "1.0.0", optional = true, features = ["color"] }

gloo = "0.8"
js-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0.183", features = ["derive"] }
gloo-utils = { version = "0.1.7", features = ["serde"] }
gloo-events = "0.2"
gloo-timers = "0.3.0"
tsify = "0.4.5"
yew-hooks = "0.2.0"
stylist = { version = "0.12.1", features = ["yew_integration"] }

[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'DomRect',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'console',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
