[package]
name = "dom"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2.87"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = { version = "0.1.7", optional = true }

cfg-if = "1.0.0"
log = { version = "0.4.20", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
console_log = { version = "1.0.0", optional = true, features = ["color"] }

gloo = "0.8"
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.9"
serde = { version = "1.0.183", features = ["derive"] }
gloo-utils = { version = "0.1.7", features = ["serde"] }
gloo-events = "0.2"
gloo-timers = "0.3.0"
tsify = "0.4.5"
yew-hooks = "0.2.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
getrandom = { version = "0.2", features = ["js"] }

base64 = "0.21.2"
image = { version = "0.24.7", optional = true }
derive_builder = "0.12.0"
do-notation = "0.1.3"
lazy_static = "1.4.0"
glam = "0.24.1"
enum_dispatch = "0.3.12"
uuid = { version = "1.4.1", features = ["v4"] }
glyph_brush = "0.7.8"
bytemuck = "1.14.0"
glyph_brush_draw_cache = "0.1.5"
glyph_brush_layout = "0.2.3"
ab_glyph = "0.2.22"
serde-wasm-bindgen = "0.6.1"
serde_bytes = "0.11.12"
instant = "0.1.12"
serde_repr = "0.1.17"
enumset = "1.1.3"
itertools = "0.11.0"
static_assertions = "1.1.0"
strum = "0.25"
strum_macros = "0.25"
float-pretty-print = "0.1.1"
anyhow = "1.0.75"
thiserror = "1.0.50"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num-traits = "0.2.17"


[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Range',
  'Element',
  'HtmlElement',
  'DomRect',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CssStyleDeclaration',
  'console',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  "WebGlActiveInfo",
  # 'WebSocket',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
]
