[package]
name = "svifpd-webview-ui"
authors = [ "elazar <elazarcoh@gmail.com>" ]
edition = "2021"
rust-version = "1.80"
resolver = "2"

[lib]
crate-type = [ "cdylib" ]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = [
  "console_error_panic_hook",
  "console_log"
]

[dependencies]
wasm-bindgen = "0.2.100"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.3"
log = { version = "0.4.27", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
console_log = { version = "1.0.0", optional = true, features = [ "color" ] }
gloo = "0.8"
js-sys = "0.3"
yew = { version = "0.21", features = [ "csr" ] }
yewdux = "0.11"
serde = { version = "1.0.219", features = [ "derive" ] }
gloo-utils = { version = "0.1.7", features = [ "serde" ] }
gloo-events = "0.2"
gloo-timers = "0.3.0"
tsify = "0.4.5"
yew-hooks = "0.3.4"
stylist = { version = "0.13.0", features = [ "yew_integration" ] }
getrandom = { version = "0.2", features = [ "js" ] }
base64 = "0.21.7"
image = { version = "0.24.9", optional = true }
derive_builder = "0.12.0"
do-notation = "0.1.3"
lazy_static = "1.5.0"
glam = "0.24.2"
enum_dispatch = "0.3.13"
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18.0", features = [ "v4", "js" ] , default-features = false }
glyph_brush = "0.7.12"
bytemuck = "1.23.2"
glyph_brush_draw_cache = "0.1.6"
glyph_brush_layout = "0.2.4"
ab_glyph = "0.2.31"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.17"
instant = "0.1.13"
serde_repr = "0.1.20"
enumset = "1.1.10"
itertools = "0.11.0"
static_assertions = "1.1.0"
strum = "0.25"
strum_macros = "0.25"
float-pretty-print = "0.1.1"
anyhow = "1.0.99"
thiserror = "1.0.69"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num-traits = "0.2.19"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlSelectElement',
  'DomRect',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CssStyleDeclaration',
  'console',
  "CustomEvent",
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  "WebGlActiveInfo",
  # 'WebSocket',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "ScrollToOptions",
  "ScrollBehavior",
  "ScrollLogicalPosition",
  "ScrollIntoViewOptions",
]
